* Simplified the HTML markup for the scrollbar. Gone is the track div (the scrollbar div itself does the job perfectly), the thumb div loses its class, and viewport/scrollbar are now floated instead of absolutely-positioned (note to self: .viewport doesn't need to be floated, it just makes the file shorter), which makes for simpler code in the end, and this actually... (index.css) ! ...Fixed the scrollbar in IE6. Phew, at last. Tested final code on IE 6/7/8/9, Safari 5.1, Chrome 17, Firefox 9 and Opera 12. Works flawlessly everywhere (except for the odd margins on IE 6/7, probably due to an issue in styling unordered lists.) (sbox.js, index.css) * The credits page needed a small update. (Credits.php) @ 2669 bytes. Need I say more, ladies and gentlemen...? (sbox.js)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1281,7 +1281,7 @@ select.sb
 		clear: left
 		color: #666
 
-	/* display area (always visible) */
+	/* Display area (always visible) */
 	.display
 		background: rgba(255,255,255,.5)
 		opacity: .9
@@ -1335,7 +1335,7 @@ select.sb
 	&.focused .display .btn, .hover .btn
 		background-image: url($images/select_arrow_bg_hover.gif)
 
-	/* dropdown styles */
+	/* Dropdown styles */
 	.items
 		background: #fff
 		border: 1px solid #828790
@@ -1382,7 +1382,7 @@ select.sb
 		.sub .item
 			padding-left: 1.5em
 
-		/* rounded corners */
+		/* Rounded corners */
 		li a
 			padding: 4px 6px
 		li.first .item
@@ -1390,34 +1390,33 @@ select.sb
 		li.last .item
 			border-radius: 0 0 5px 5px
 
-	/* custom scrollbar */
-	.overview
-		overflow: hidden
+	/* Scrollbar viewport */
+	.overview, .viewport
 		position: relative
-	.viewport
-		margin-right: 15px
+		float: left
+
+	/* The scrollbar itself */
 	.scrollbar
-		position: absolute
+		position: relative
+		float: right
+		right: 1px
 		width: 11px
 		background: #f5f8f5
-		float: right
-	.track
-		position: relative
-		width: 11px
-	.thumb
-		background: #e0e3e0
-		background: -prefix-linear-gradient(left, #ddd, #e0e6e0, #ccc)
-		border-radius: 6px
-		height: 18px
-		width: 13px
-		cursor: pointer
-		overflow: hidden
-		position: absolute
-		top: 0
-		left: -1px
-		:hover
-			background: #e8ece8
-			background: -prefix-linear-gradient(left, #ddd, #e8ece8, #ccc)
+
+		/* Scrollbar thumb */
+		div
+			position: absolute
+			overflow: hidden
+			background: #e0e3e0
+			background: -prefix-linear-gradient(left, #ddd, #e0e6e0, #ccc)
+			border-radius: 6px
+			cursor: pointer
+			height: 18px
+			width: 13px
+			left: -1px
+			:hover
+				background: #e8ece8
+				background: -prefix-linear-gradient(left, #ddd, #e8ece8, #ccc)
 
 .cat .sbox
 	font-size: 14px
